Started implementing landing page

--- a/app/pages/index.hbs
+++ b/app/pages/index.hbs
@@ -1,8 +1,165 @@
-<h1>Welcome to my app!</h1>
-<ul>
-  {{#if currentUser}}
-    <li><a href="/{{currentUser.details.username}}">Go to your dashboard</a></li>
-  {{else}}
-    <li><a href="/user/signup">Sign up for an account</a></li>
-  {{/if}}
-</ul>
+{{!-- Hero --}}
+<div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+  <div class="max-w-xl sm:mx-auto lg:max-w-2xl">
+    <div class="flex flex-col mb-16 sm:text-center sm:mb-0">
+      <div class="mb-6 sm:mx-auto">
+        <div class="flex items-center justify-center w-12 h-12 rounded-full bg-mint-100">
+          <svg class="w-10 h-10 text-mint-900" stroke="currentColor" viewBox="0 0 52 52">
+            <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+          </svg>
+        </div>
+      </div>
+
+      <div class="flex flex-col items-center max-w-xl mb-10 md:mx-auto sm:text-center lg:max-w-2xl md:mb-12">
+        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold leading-none tracking-tight text-slate-100 sm:text-4xl md:mx-auto">
+          <span class="relative inline-block">
+            <svg viewBox="0 0 52 24" fill="currentColor" class="absolute top-0 left-0 z-0 hidden w-32 -mt-8 -ml-20 text-mint-100 lg:w-32 lg:-ml-28 lg:-mt-10 sm:block">
+              <defs>
+                <pattern id="e77df901-b9d7-4b9b-822e-16b2d410795b" x="0" y="0" width=".135" height=".30">
+                  <circle cx="1" cy="1" r=".7"></circle>
+                </pattern>
+              </defs>
+
+              <rect fill="url(#e77df901-b9d7-4b9b-822e-16b2d410795b)" width="52" height="24"></rect>
+            </svg>
+
+            <span class="relative">The</span>
+          </span>
+          
+          app that helps you get your life together.
+        </h2>
+
+        <p class="max-w-lg text-base text-slate-100 md:text-md">
+          Gyst utilizes revolutionary <span class="font-medium">Web3 blockchain crypto technology</span> to ensure that you stay on top of what's important.
+        </p>
+      </div>
+
+      <div>
+        <a
+          href="/"
+          class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-mint-900 transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 focus:shadow-outline focus:outline-none"
+        >
+          Get started
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{!-- Features --}}
+<div class="flex justify-center bg-mint-100 px-4 py-16 mx-auto md:px-24 lg:px-8 lg:py-20">
+  <div class="grid gap-8 row-gap-5 lg:grid-cols-3 sm:max-w-xl md:max-w-full lg:max-w-screen-xl">
+    <div class="relative p-px overflow-hidden transition duration-300 transform border rounded shadow-sm hover:scale-105 group hover:shadow-xl">
+      <div class="absolute bottom-0 left-0 w-full h-1 duration-300 origin-left transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
+      <div class="absolute bottom-0 left-0 w-1 h-full duration-300 origin-bottom transform scale-y-0 bg-mint-900 group-hover:scale-y-100"></div>
+      <div class="absolute top-0 left-0 w-full h-1 duration-300 origin-right transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
+      <div class="absolute bottom-0 right-0 w-1 h-full duration-300 origin-top transform scale-y-0 bg-mint-900 group-hover:scale-y-100"></div>
+      
+      <div class="relative p-5 bg-slate-100 rounded-sm">
+        <div class="flex flex-col mb-2 lg:items-center lg:flex-row">
+          <div class="flex items-center justify-center w-10 h-10 mb-4 mr-2 rounded-full bg-mint-900 lg:mb-0">
+            <svg class="w-8 h-8 text-mint-100" stroke="currentColor" viewBox="0 0 52 52">
+              <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+            </svg>
+          </div>
+
+          <h6 class="font-semibold leading-5">Feature 1</h6>
+        </div>
+        <p class="mb-2 text-sm text-gray-900">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque rem aperiam.
+        </p>
+      </div>
+    </div>
+
+    <div class="relative p-px overflow-hidden transition duration-300 transform border rounded shadow-sm hover:scale-105 group hover:shadow-xl">      
+      <div class="absolute bottom-0 left-0 w-full h-1 duration-300 origin-left transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
+      <div class="absolute bottom-0 left-0 w-1 h-full duration-300 origin-bottom transform scale-y-0 bg-mint-900 group-hover:scale-y-100"></div>
+      <div class="absolute top-0 left-0 w-full h-1 duration-300 origin-right transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
+      <div class="absolute bottom-0 right-0 w-1 h-full duration-300 origin-top transform scale-y-0 bg-mint-900 group-hover:scale-y-100"></div>
+      
+      <div class="relative p-5 bg-slate-100 rounded-sm">
+        <div class="flex flex-col mb-2 lg:items-center lg:flex-row">
+          <div class="flex items-center justify-center w-10 h-10 mb-4 mr-2 rounded-full bg-mint-900 lg:mb-0">
+            <svg class="w-8 h-8 text-mint-100" stroke="currentColor" viewBox="0 0 52 52">
+              <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+            </svg>
+          </div>
+
+          <h6 class="font-semibold leading-5">Feature 2</h6>
+        </div>
+        <p class="mb-2 text-sm text-gray-900">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque rem aperiam.
+        </p>
+      </div>
+    </div>
+
+    <div class="relative p-px overflow-hidden transition duration-300 transform border rounded shadow-sm hover:scale-105 group hover:shadow-xl">
+      <div class="absolute bottom-0 left-0 w-full h-1 duration-300 origin-left transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
+      <div class="absolute bottom-0 left-0 w-1 h-full duration-300 origin-bottom transform scale-y-0 bg-mint-900 group-hover:scale-y-100"></div>
+      <div class="absolute top-0 left-0 w-full h-1 duration-300 origin-right transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
+      <div class="absolute bottom-0 right-0 w-1 h-full duration-300 origin-top transform scale-y-0 bg-mint-900 group-hover:scale-y-100"></div>
+      
+      <div class="relative p-5 bg-slate-100 rounded-sm">
+        <div class="flex flex-col mb-2 lg:items-center lg:flex-row">
+          <div class="flex items-center justify-center w-10 h-10 mb-4 mr-2 rounded-full bg-mint-900 lg:mb-0">
+            <svg class="w-8 h-8 text-mint-100" stroke="currentColor" viewBox="0 0 52 52">
+              <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+            </svg>
+          </div>
+
+          <h6 class="font-semibold leading-5">Feature 3</h6>
+        </div>
+        <p class="mb-2 text-sm text-gray-900">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque rem aperiam.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{!-- CTA --}}
+<div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+  <div class="grid gap-10 lg:grid-cols-2">
+    <div class="flex flex-col justify-center md:pr-8 xl:pr-0 lg:max-w-lg">
+      <div class="flex items-center justify-center w-16 h-16 mb-4 rounded-full bg-mint-100">
+        <svg class="text-mint-900 w-7 h-7" viewBox="0 0 24 24">
+          <polyline fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" points=" 8,5 8,1 16,1 16,5" stroke-linejoin="round"></polyline>
+          <polyline fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" points="9,15 1,15 1,5 23,5 23,15 15,15" stroke-linejoin="round"></polyline>
+          <polyline fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" points="22,18 22,23 2,23 2,18" stroke-linejoin="round"></polyline>
+          <rect x="9" y="13" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" width="6" height="4" stroke-linejoin="round"></rect>
+        </svg>
+      </div>
+      <div class="max-w-xl mb-6">
+        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-slate-100 sm:text-4xl sm:leading-none">
+          We are very<br class="hidden md:block" />
+          <span class="inline-block text-mint-100">poggers</span>
+          for productivity.
+        </h2>
+        <p class="text-base text-slate-100 md:text-md">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae. explicabo.
+        </p>
+      </div>
+      <div>
+        <a
+          href="/"
+          class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-mint-900 transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 focus:shadow-outline focus:outline-none"
+        >
+          Get started
+        </a>
+      </div>
+    </div>
+    <div class="flex items-center justify-center -mx-4 lg:pl-8">
+      <div class="flex flex-col items-end px-3">
+        <img
+          class="object-cover mb-6 rounded shadow-lg h-28 sm:h-48 xl:h-56 w-28 sm:w-48 xl:w-56"
+          src="https://images.pexels.com/photos/3184287/pexels-photo-3184287.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260"
+          alt=""
+        />
+        <img class="object-cover w-20 h-20 rounded shadow-lg sm:h-32 xl:h-40 sm:w-32 xl:w-40" src="https://images.pexels.com/photos/3182812/pexels-photo-3182812.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" alt="" />
+      </div>
+      <div class="px-3">
+        <img class="object-cover w-40 h-40 rounded shadow-lg sm:h-64 xl:h-80 sm:w-64 xl:w-80" src="https://images.pexels.com/photos/3182739/pexels-photo-3182739.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500" alt="" />
+      </div>
+    </div>
+  </div>
+</div>
