--- a/app/pages/user/login.hbs
+++ b/app/pages/user/login.hbs
@@ -1,7 +1,47 @@
-<form action="/user/login" method="post">
-  <h1>Log in</h1>
-  <input type="text" name="username" placeholder="username" required>
-  <input type="password" name="password" placeholder="password" required>
-  <a href="/user/forgot">Forgot your password?</a>
-  <button type="submit">Log in</button>
-</form>
+<div class="relative">
+  <div class="relative bg-mint-100 bg-opacity-75">
+    <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+      <div class="flex flex-col items-center justify-between xl:flex-row">
+        <div class="w-full max-w-xl xl:px-8 xl:w-5/12">
+          <div class="bg-mint-900 rounded shadow-2xl p-7 sm:p-10">
+            <h3 class="mb-4 text-xl font-semibold sm:text-center text-white sm:mb-6 sm:text-2xl">
+              Sign in
+            </h3>
+            <form action="/user/login" method="post">
+              <div class="mb-1 sm:mb-2">
+                <label for="username" class="inline-block text-white mb-1 font-medium">Username</label>
+                <input
+                  placeholder="username"
+                  required=""
+                  type="text"
+                  class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white border border-gray-300 rounded shadow-sm appearance-none focus:border-mint-100 focus:outline-none focus:shadow-outline"
+                  id="username"
+                  name="username"
+                />
+              </div>
+              <div class="mb-1 sm:mb-2">
+                <label for="password" class="inline-block text-white mb-1 font-medium">Password</label>
+                <input
+                  placeholder="password"
+                  required=""
+                  type="password"
+                  class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white border border-gray-300 rounded shadow-sm appearance-none focus:border-deep-purple-accent-400 focus:outline-none focus:shadow-outline"
+                  id="password"
+                  name="password"
+                />
+              </div>
+              <div class="mt-4 mb-2 sm:mb-4">
+                <button
+                  type="submit"
+                  class="inline-flex items-center justify-center w-full h-12 px-6 font-medium tracking-wide transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 focus:shadow-outline focus:outline-none"
+                >
+                  Login
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
