--- a/app/pages/user/signup.hbs
+++ b/app/pages/user/signup.hbs
@@ -1,24 +1,24 @@
 <div class="relative">
-  <div class="relative bg-gray-900 bg-opacity-75">
+  <div class="relative bg-mint-100 bg-opacity-75">
     <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
       <div class="flex flex-col items-center justify-between xl:flex-row">
         <div class="w-full max-w-xl mb-12 xl:mb-0 xl:pr-16 xl:w-7/12">
-          <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
+          <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none">
             Sign up for the best service <br class="hidden md:block" />
-            you didn't <span class="text-mint-100">ask for</span>
+            you didn't ask for
           </h2>
-          <p class="max-w-xl mb-4 text-base text-white md:text-lg">
+          <p class="max-w-xl mb-4 text-base md:text-lg">
             You know you want to.
           </p>
         </div>
         <div class="w-full max-w-xl xl:px-8 xl:w-5/12">
-          <div class="bg-mint-100 rounded shadow-2xl p-7 sm:p-10">
-            <h3 class="mb-4 text-xl font-semibold sm:text-center sm:mb-6 sm:text-2xl">
+          <div class="bg-mint-900 rounded shadow-2xl p-7 sm:p-10">
+            <h3 class="mb-4 text-xl font-semibold sm:text-center text-white sm:mb-6 sm:text-2xl">
               Sign up
             </h3>
             <form action="/user/signup" method="post">
               <div class="mb-1 sm:mb-2">
-                <label for="username" class="inline-block mb-1 font-medium">Username</label>
+                <label for="username" class="inline-block text-white mb-1 font-medium">Username</label>
                 <input
                   placeholder="username"
                   required=""
@@ -29,7 +29,7 @@
                 />
               </div>
               <div class="mb-1 sm:mb-2">
-                <label for="email" class="inline-block mb-1 font-medium">E-mail</label>
+                <label for="email" class="inline-block text-white mb-1 font-medium">E-mail</label>
                 <input
                   placeholder="example@email.com"
                   required=""
@@ -40,7 +40,7 @@
                 />
               </div>
               <div class="mb-1 sm:mb-2">
-                <label for="password" class="inline-block mb-1 font-medium">Password</label>
+                <label for="password" class="inline-block text-white mb-1 font-medium">Password</label>
                 <input
                   placeholder="password"
                   required=""
@@ -53,7 +53,7 @@
               <div class="mt-4 mb-2 sm:mb-4">
                 <button
                   type="submit"
-                  class="inline-flex items-center justify-center w-full h-12 px-6 font-medium tracking-wide text-white transition duration-200 rounded shadow-md bg-mint-900 hover:bg-mint-800 focus:shadow-outline focus:outline-none"
+                  class="inline-flex items-center justify-center w-full h-12 px-6 font-medium tracking-wide transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 focus:shadow-outline focus:outline-none"
                 >
                   Create Account
                 </button>
