--- a/app/pages/user/login.hbs
+++ b/app/pages/user/login.hbs
@@ -30,6 +30,11 @@
                   name="password"
                 />
               </div>
+              <div class="mb-1 sm:mb-2">
+                <a href="/user/forgot" aria-label="" class="inline-flex items-center font-semibold tracking-wider transition-colors duration-200 text-mint-100 hover:text-mint-50">
+                  Forget your password?
+                </a>
+              </div>
               <div class="mt-4 mb-2 sm:mb-4">
                 <button
                   type="submit"
