--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -567,6 +567,13 @@ video {
   position: relative;
 }
 
+.inset-0{
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
 .top-0{
   top: 0px;
 }
@@ -661,12 +668,12 @@ video {
   margin-right: 0.5rem;
 }
 
-.mb-12{
-  margin-bottom: 3rem;
-}
-
 .mb-1{
   margin-bottom: 0.25rem;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
 }
 
 .inline-block{
@@ -783,10 +790,6 @@ video {
 
 .w-40{
   width: 10rem;
-}
-
-.w-3{
-  width: 0.75rem;
 }
 
 .max-w-xl{
@@ -946,16 +949,6 @@ video {
   background-color: rgb(33 33 33 / var(--tw-bg-opacity));
 }
 
-.bg-mint-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(158 240 211 / var(--tw-bg-opacity));
-}
-
-.bg-mint-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(12 64 46 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-75{
   --tw-bg-opacity: 0.75;
 }
@@ -1040,11 +1033,6 @@ video {
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .font-bold{
@@ -1133,16 +1121,6 @@ video {
   color: rgb(33 33 33 / var(--tw-text-opacity));
 }
 
-.text-mint-50{
-  --tw-text-opacity: 1;
-  color: rgb(158 240 211 / var(--tw-text-opacity));
-}
-
-.text-teal-accent-400{
-  --tw-text-opacity: 1;
-  color: rgb(29 233 182 / var(--tw-text-opacity));
-}
-
 .underline{
   text-decoration-line: underline;
 }
@@ -1219,11 +1197,6 @@ video {
   background-color: rgb(98 0 234 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-mint-800:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(12 64 46 / var(--tw-bg-opacity));
-}
-
 .hover\:text-mint-100:hover{
   --tw-text-opacity: 1;
   color: rgb(115 228 188 / var(--tw-text-opacity));
@@ -1239,20 +1212,10 @@ video {
   color: rgb(158 240 211 / var(--tw-text-opacity));
 }
 
-.hover\:text-teal-accent-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(0 191 165 / var(--tw-text-opacity));
-}
-
 .hover\:shadow-xl:hover{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.focus\:border-deep-purple-accent-400:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(101 31 255 / var(--tw-border-opacity));
 }
 
 .focus\:border-mint-100:focus{
@@ -1260,9 +1223,9 @@ video {
   border-color: rgb(115 228 188 / var(--tw-border-opacity));
 }
 
-.focus\:border-mint-50:focus{
+.focus\:border-deep-purple-accent-400:focus{
   --tw-border-opacity: 1;
-  border-color: rgb(158 240 211 / var(--tw-border-opacity));
+  border-color: rgb(101 31 255 / var(--tw-border-opacity));
 }
 
 .focus\:bg-deep-purple-50:focus{
@@ -1374,11 +1337,6 @@ video {
   .sm\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .sm\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .sm\:leading-none{
@@ -1516,12 +1474,12 @@ video {
     width: 20rem;
   }
 
-  .xl\:w-7\/12{
-    width: 58.333333%;
-  }
-
   .xl\:w-5\/12{
     width: 41.666667%;
+  }
+
+  .xl\:w-7\/12{
+    width: 58.333333%;
   }
 
   .xl\:flex-row{
