--- a/app/pages/user/login.hbs
+++ b/app/pages/user/login.hbs
@@ -1,9 +1,10 @@
 <div class="relative">
-  <div class="relative bg-mint-100 bg-opacity-75">
+  <img src="https://images.pexels.com/photos/3184287/pexels-photo-3184287.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" class="absolute inset-0 object-cover w-full h-full" alt="" />  
+  <div class="relative bg-gray-900 bg-opacity-75">
     <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
       <div class="flex flex-col items-center justify-between xl:flex-row">
         <div class="w-full max-w-xl xl:px-8 xl:w-5/12">
-          <div class="bg-mint-900 rounded shadow-2xl p-7 sm:p-10">
+          <div class="bg-gray-900 rounded shadow-2xl p-7 sm:p-10">
             <h3 class="mb-4 text-xl font-semibold sm:text-center text-white sm:mb-6 sm:text-2xl">
               Sign in
             </h3>
