--- a/app/pages/user/signup.hbs
+++ b/app/pages/user/signup.hbs
@@ -1,18 +1,19 @@
 <div class="relative">
-  <div class="relative bg-mint-100 bg-opacity-75">
+  <img src="https://images.pexels.com/photos/3747463/pexels-photo-3747463.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" class="absolute inset-0 object-cover w-full h-full" alt="" />
+  <div class="relative bg-gray-900 bg-opacity-75">
     <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
       <div class="flex flex-col items-center justify-between xl:flex-row">
         <div class="w-full max-w-xl mb-12 xl:mb-0 xl:pr-16 xl:w-7/12">
-          <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none">
+          <h2 class="max-w-lg mb-6 font-sans text-white text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none">
             Sign up for the best service <br class="hidden md:block" />
             you didn't ask for
           </h2>
-          <p class="max-w-xl mb-4 text-base md:text-lg">
-            You know you want to.
+          <p class="max-w-xl mb-4 text-white text-base md:text-lg">
+            Please sign up, we’re losing money and going bankrupt because we took out a $44 billion loan to make this app
           </p>
         </div>
         <div class="w-full max-w-xl xl:px-8 xl:w-5/12">
-          <div class="bg-mint-900 rounded shadow-2xl p-7 sm:p-10">
+          <div class="bg-gray-900 rounded shadow-2xl p-7 sm:p-10">
             <h3 class="mb-4 text-xl font-semibold sm:text-center text-white sm:mb-6 sm:text-2xl">
               Sign up
             </h3>
