added links and changed text

--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -22,8 +22,8 @@
           <span class="ml-2 text-xl font-bold tracking-wide text-slate-100 uppercase">Gyst</span>
         </a>
         <ul class="flex items-center hidden space-x-8 lg:flex">
-          <li><a href="/" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-slate-100 transition-colors duration-200 hover:text-mint-100">Features</a></li>
-          <li><a href="/" aria-label="About us" title="About us" class="font-medium tracking-wide text-slate-100 transition-colors duration-200 hover:text-mint-100">About us</a></li>
+          <li><a href="/#features" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-slate-100 transition-colors duration-200 hover:text-mint-100">Features</a></li>
+          <li><a href="/about" aria-label="About us" title="About us" class="font-medium tracking-wide text-slate-100 transition-colors duration-200 hover:text-mint-100">About us</a></li>
         </ul>
       </div>
       {{#if currentUser}}
@@ -42,10 +42,10 @@
         </ul>
       {{else}}
         <ul class="flex items-center hidden space-x-8 lg:flex">
-          <li><a href="/" aria-label="Sign in" title="Sign in" class="font-medium tracking-wide text-slate-100 transition-colors duration-200 hover:text-mint-100">Sign in</a></li>
+          <li><a href="/user/login" aria-label="Sign in" title="Sign in" class="font-medium tracking-wide text-slate-100 transition-colors duration-200 hover:text-mint-100">Log in</a></li>
           <li>
             <a
-              href="/"
+              href="/user/signup"
               class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-mint-900 transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 focus:shadow-outline focus:outline-none"
               aria-label="Sign up"
               title="Sign up"
@@ -186,7 +186,7 @@
           </a>
         </div>
         <p class="mt-4 text-sm text-slate-100">
-          Bacon ipsum dolor amet short ribs pig sausage prosciutto chicken spare ribs salami.
+          Give us clout. Please. We've spent so much money on this company we need brand deals.
         </p>
       </div>
     </div>
