added links and words

--- a/app/pages/index.hbs
+++ b/app/pages/index.hbs
@@ -36,7 +36,7 @@
 
       <div>
         <a
-          href="/"
+          href="/signup"
           class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-mint-900 transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 focus:shadow-outline focus:outline-none"
         >
           Get started
@@ -47,7 +47,7 @@
 </div>
 
 {{!-- Features --}}
-<div class="flex justify-center bg-mint-100 px-4 py-16 mx-auto md:px-24 lg:px-8 lg:py-20">
+<div id="features" class="flex justify-center bg-mint-100 px-4 py-16 mx-auto md:px-24 lg:px-8 lg:py-20">
   <div class="grid gap-8 row-gap-5 lg:grid-cols-3 sm:max-w-xl md:max-w-full lg:max-w-screen-xl">
     <div class="relative p-px overflow-hidden transition duration-300 transform border rounded shadow-sm hover:scale-105 group hover:shadow-xl">
       <div class="absolute bottom-0 left-0 w-full h-1 duration-300 origin-left transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
@@ -63,10 +63,10 @@
             </svg>
           </div>
 
-          <h6 class="font-semibold leading-5">Feature 1</h6>
+          <h6 class="font-semibold leading-5">Powerful Productivity</h6>
         </div>
         <p class="mb-2 text-sm text-gray-900">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque rem aperiam.
+          We make productivity so easy. Gone are the days where you just check a box and call it a day. We have patented, scientifically-proven techniques powered by blockchain technology that will ensure that anything you have to do will be done in a matter of minutes.
         </p>
       </div>
     </div>
@@ -77,7 +77,7 @@
       <div class="absolute top-0 left-0 w-full h-1 duration-300 origin-right transform scale-x-0 bg-mint-900 group-hover:scale-x-100"></div>
       <div class="absolute bottom-0 right-0 w-1 h-full duration-300 origin-top transform scale-y-0 bg-mint-900 group-hover:scale-y-100"></div>
       
-      <div class="relative p-5 bg-slate-100 rounded-sm">
+      <div class="relative p-5 bg-slate-100 h-full rounded-sm">
         <div class="flex flex-col mb-2 lg:items-center lg:flex-row">
           <div class="flex items-center justify-center w-10 h-10 mb-4 mr-2 rounded-full bg-mint-900 lg:mb-0">
             <svg class="w-8 h-8 text-mint-100" stroke="currentColor" viewBox="0 0 52 52">
@@ -85,10 +85,12 @@
             </svg>
           </div>
 
-          <h6 class="font-semibold leading-5">Feature 2</h6>
+          <h6 class="font-semibold leading-5">Tantilizing Time Management</h6>
         </div>
         <p class="mb-2 text-sm text-gray-900">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque rem aperiam.
+          I don't know what tantilizing means. It sounds good though.
+          <br><br>
+          Anyway, this is a to-do list app, so like time management is kind of an important thing here that, by nature, we achieve very well.
         </p>
       </div>
     </div>
@@ -107,10 +109,10 @@
             </svg>
           </div>
 
-          <h6 class="font-semibold leading-5">Feature 3</h6>
+          <h6 class="font-semibold leading-5">Google Calendar Integration</h6>
         </div>
         <p class="mb-2 text-sm text-gray-900">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque rem aperiam.
+          You use Google Calendar, your dad uses Google Calendar, everyone uses Google Calendar. There's no escape from the grip that Google holds on the digital calendar space. Why fight it? That's why we added native integration so you never forget what to do.
         </p>
       </div>
     </div>
@@ -136,15 +138,15 @@
           for productivity.
         </h2>
         <p class="text-base text-slate-100 md:text-md">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae. explicabo.
+          It's true. Factual even. Scientifically proven. Absolute. Accurate and authentic. Undeniable. Legitimate. Genuine.
         </p>
       </div>
       <div>
         <a
-          href="/"
+          href="/user/signup"
           class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-mint-900 transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 focus:shadow-outline focus:outline-none"
         >
-          Get started
+          Please sign up
         </a>
       </div>
     </div>
