--- a/app/pages/user/reset.hbs
+++ b/app/pages/user/reset.hbs
@@ -7,7 +7,7 @@
             <h3 class="mb-4 text-xl font-semibold sm:text-center text-white sm:mb-6 sm:text-2xl">
               Set a new password
             </h3>
-            <form action="" method="post">
+            <form method="post">
               <div class="mb-1 sm:mb-2">
                 <label for="password" class="inline-block text-white mb-1 font-medium">Password</label>
                 <input
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<form action="" method="post">
+<form method="post">
   <h1>Set a New Password</h1>
   <input type="password" name="password" placeholder="New password" required>
   <button type="submit">Set Password</button>
