added sortable list

--- a/app/pages/app-index.hbs
+++ b/app/pages/app-index.hbs
@@ -30,6 +30,7 @@
                     >{{default stack.date "Date"}}</p>
                     <div
                         array
+                        sortable="taskList"
                         key="taskList" 
                         class="tasklist"
                     >
